# Finance

./: .gitignore  CODEX.md  README.md  equity_quality_scraper.py  pyproject.toml  srcstock_summary.py  stock_summary.py  test.py
HYP/: HYP-001.yaml
doc/: AI Project Strategy.md  Decision Theory.md  EDA.md  Philosophy.md  Strategy.md  Value Investing.md  value.txt
docs/: policies.md
models/: __init__.py
models/techical/: backtest.py
notebooks/: BOND.ipynb  COM.ipynb  CPI.ipynb  Forex.ipynb  HMM.ipynb  ONS_API.ipynb  alphav_analysisi.ipynb  fudmantal.ipynb  gm_hmm_trend_strategy.ipynb  kalman_filter.ipynb  kalman_hmm.ipynb  momentum_trend_detection.ipynb  moving_averages.ipynb  passive_flow_tracker.ipynb  polyline_segmentation_snp500.ipynb  portfolio_optimization_workflow.ipynb  snp_500_yr_annual_return.ipynb  sp500_cluster_quality_checks.ipynb  sp500_hmm_bull_bear_analysis.ipynb  spy_fed_correlation.ipynb  stagflation_stress_test.ipynb
scripts/: cluster_sp500_fundamentals.py  get_spy_10y.py  run_discount_screener.py
src/alphavantage/: __main__.py  cli.py  providers.py
src/alphavantage.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/finance/: __main__.py  cli.py  config.py  db.py  discount_screener.py  fundamental_ingestion.py  fundamental_migration.py  fundamentals_pipeline.py  ingestion.py  providers.py
src/finance/backtest/: __init__.py  regime_filtered.py
src/finance/execution/: README.md
src/finance/features/: __init__.py  beta.py  macro_regime.py
src/finance/models/: __init__.py  input_data.py  markov_chain.py
src/finance/portfolio/: hello_world.py
src/finance/preprocessing/: __init__.py  clean.py  pipeline.py  transform.py
tests/: conftest.py  test_cli.py  test_config.py  test_db.py  test_dimensional_cluster.py  test_dimensional_models.py  test_discount_screener.py  test_ftse250_scraper.py  test_fundamental_ingestion.py  test_fundamental_migration.py  test_fundamentals_pipeline.py  test_gold_endpoint.py  test_import.py  test_ingestion.py  test_macro_endpoints.py  test_market_endpoints.py  test_markov_chain.py  test_nikkei225_scraper.py  test_project_structure.py  test_providers.py  test_rsi_model.py  test_sp500_scraper.py
tests/legacy/: test_beta.py  test_ingestion.py  test_macro_regime.py  test_model_input_integration.py  test_regime_filtered_backtest.py  test_rsi_model.py
(+18 files in other folders)
