[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "finance"
version = "0.1.0"
description = "Python project scaffold for finance data experiments and scripts."
readme = "README.md"
requires-python = ">=3.14"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]
viz = [
    "ipywidgets>=8.1",
    "matplotlib>=3.9",
    "plotly>=5.24",
    "streamlit>=1.39",
]
yfinance = [
    "yfinance>=0.2",
    "pyarrow>=16.0",
]
duckdb = [
    "duckdb>=1.1",
]
dimensional = [
    "numpy>=2.0",
    "scikit-learn>=1.5",
    "umap-learn>=0.5",
]

[project.scripts]
finance = "finance.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py314"
